syntax = "proto3";

package temporal.server.api.cluster.v1;

option go_package = "go.temporal.io/server/api/cluster/v1;cluster";

import "google/protobuf/timestamp.proto";

import "temporal/server/api/enums/v1/cluster.proto";

message HostInfo {
    string identity = 1;
}

message RingInfo {
    string role = 1;
    int32 member_count = 2;
    repeated HostInfo members = 3;
}

message MembershipInfo {
    HostInfo current_host = 1;
    repeated string reachable_members = 2;
    repeated RingInfo rings = 3;
}

message ClusterMember {
    temporal.server.api.enums.v1.ClusterMemberRole role = 1;
    string host_id = 2;
    string rpc_address = 3;
    int32 rpc_port = 4;
    google.protobuf.Timestamp session_start_time = 5;
    google.protobuf.Timestamp last_heartbit_time = 6;
    google.protobuf.Timestamp record_expiry_time = 7;
}
